fix: details marker visibility on safari

--- a/src/companies/components/company-list/company-list.styl
+++ b/src/companies/components/company-list/company-list.styl
@@ -8,6 +8,9 @@
 .fwd-company-list-item-detail-summary
   padding 20px 5px
   list-style none
+  &::marker,
+  &::-webkit-details-marker
+    display none
 
 .fwd-company-list-item-detail-content
   padding 5px 5px 20px
